# crossmem-mcp

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  install-docs-lint.yml  nightly.yml  release.yml
install/: README.md  _template.md  amazonq.md  claude_code.md  cline.md  continuedev.md  cursor.md  gemini.md  goose.md  kilocode.md  opencode.md  pi.md  windsurf.md  zed.md
schemas/: doctor.json
skills/crossmem-install/: SKILL.md
src/crossmem/: cleanup.py  cli.py  configure.py  connectors_status.py  doctor.py  installer.py  mcp_ping.py  server.py  uninstaller.py
src/crossmem/backends/: base.py  chroma_backend.py  qdrant_backend.py  sqlite_backend.py
src/crossmem/connectors/: _vscode.py  amazonq.py  base.py  claude_code.py  cline.py  config_io.py  continuedev.py  cursor.py  gemini.py  goose.py  kilocode.py  opencode.py  pi.py  registry.py  windsurf.py  zed.py
src/crossmem/core/: chunking.py  embedding.py  models.py  store.py  tagging.py
src/crossmem/docs/: install_template.py
src/crossmem/sources/: _http.py  base.py  github.py  registry.py  web.py
tests/: test_cleanup.py  test_cli.py  test_dependencies.py  test_doctor.py  test_editable_install_guard.py  test_installer.py  test_license_and_metadata.py  test_precommit_config.py  test_pyproject_config.py  test_pytest_httpx_plugin.py  test_server.py  test_server_query_source.py  test_server_tools.py  test_smoke.py  test_sync_removal.py  test_uninstaller.py  test_verify_script.py  test_workflows.py
tests/_fixtures/: __init__.py  embedder.py
tests/backends/: test_base.py  test_chroma_backend.py  test_fts_multilingual.py  test_get_conn_lock_contract.py  test_migration_v2_to_v3.py  test_qdrant_backend.py  test_qdrant_delete_guard.py  test_sqlite_backend.py  test_sqlite_thread_safety.py  test_stats_contract.py
tests/cli/: test_configure.py  test_mcp_ping.py  test_status_connectors.py
tests/connectors/: test_amazonq.py  test_backup_retention.py  test_base.py  test_claude_code.py  test_cline.py  test_config_io.py  test_continuedev.py  test_cursor.py  test_gemini.py  test_goose.py  test_kilocode.py  test_metadata.py  test_opencode.py  test_pi.py  test_register_snippet_parity.py  test_windsurf.py  test_zed.py
tests/core/: test_chunking.py  test_embedder_protocol.py  test_embedding.py  test_embedding_warmup.py  test_fixed_embedder.py  test_models.py  test_models_factory.py  test_store.py  test_store_atomic.py  test_store_delete.py  test_store_export.py  test_store_query.py  test_store_stats.py  test_tagging.py
tests/docs/: _regen_snapshots.py  test_paths_for_platform.py  test_render.py
tests/doctor/: test_backup_retention_check.py  test_install_doc_check.py  test_json_output.py  test_support_key.py
tests/e2e/: .env.example  README.md  conftest.py  matrix.py  run_all.ps1  run_all.sh  test_fault_injection_scenarios.py  test_happy_path.py  test_mock_llm_server.py
tests/e2e_runner/: test_cli_config_validate_amazon_q.py  test_cli_config_validate_cline.py  test_cli_config_validate_continue_dev.py  test_cli_config_validate_cursor.py  test_cli_config_validate_gemini_cli.py  test_cli_config_validate_goose.py  test_cli_config_validate_windsurf.py  test_cli_config_validate_zed.py  test_docker_base_linux.py  test_docker_base_windows.py  test_fault_injection.py  test_llm_matrix.py  test_mock_runner.py  test_opus_runner.py  test_qwen_runner.py  test_scenario_claude_code.py  test_scenario_kilo_code.py
tests/install/: _helpers.py  test_check_script.py  test_dry_run.py  test_per_cli_docs.py  test_restart_hints.py  test_template.py  test_workflow.py
tests/integration/: test_edge_cases.py  test_query_source_dispatch.py  test_roundtrips.py
tests/llms_txt/: test_llms_txt.py
tests/security/: conftest.py  test_dimension_mismatch.py  test_file_permissions.py  test_fts5_injection.py  test_ssrf.py  test_zip_slip.py
tests/skills/: test_crossmem_install.py
tests/smoke/: test_docker_smoke.py
tests/sources/: conftest.py  test_base.py  test_dns_pinning.py  test_github.py  test_http_guard.py  test_http_helper.py  test_registry.py  test_ssrf_guard.py  test_web.py
tools/: check_commit_msg.py  check_editable_install.py  check_install_docs.py  verify.py
(+71 files in other folders)
